Bug 347962 - Crash if I click Leave | Switch user [Fedora]
Summary: Crash if I click Leave | Switch user [Fedora]
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.3.0
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: Vishesh Handa
URL:
Keywords:
: 347965 347985 356650 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-05-19 17:34 UTC by Symeon Huang
Modified: 2016-02-16 01:17 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Symeon Huang 2015-05-19 17:34:52 UTC
Krunner crashed when I clicked Leave | Switch user.

In addition, there is no response when I clicked logout.

Reproducible: Always

Steps to Reproduce:
1. Click Application Launcher
2. Navigate to Leave
3. Click Switch user

Actual Results:  
Crashed

Expected Results:  
Terminate the session and send me back to SDDM

Backtrace generated by crash handler.

Application: krunner (krunner), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
81	T_PSEUDO (SYSCALL_SYMBOL, SYSCALL_NAME, SYSCALL_NARGS)
[Current thread is 1 (Thread 0x7efc9f4f3900 (LWP 1933))]

Thread 4 (Thread 0x7efc80c0d700 (LWP 1934)):
#0  0x00007efc995ea66d in poll () at ../sysdeps/unix/syscall-template.S:81
#1  0x00007efc9844d182 in _xcb_conn_wait (__timeout=-1, __nfds=1, __fds=0x7efc80c0cbc0) at /usr/include/bits/poll2.h:46
#2  0x00007efc9844d182 in _xcb_conn_wait (c=c@entry=0x1b0dfd0, cond=cond@entry=0x1b0e010, vector=vector@entry=0x0, count=count@entry=0x0) at xcb_conn.c:459
#3  0x00007efc9844ecff in xcb_wait_for_event (c=0x1b0dfd0) at xcb_in.c:623
#4  0x00007efc827555e9 in QXcbEventReader::run() (this=0x1b1c500) at qxcbconnection.cpp:1108
#5  0x00007efc9a1f4ede in QThreadPrivate::start(void*) (arg=0x1b1c500) at thread/qthread_unix.cpp:337
#6  0x00007efc95eeb555 in start_thread (arg=0x7efc80c0d700) at pthread_create.c:333
#7  0x00007efc995f5f3d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 3 (Thread 0x7efc777ce700 (LWP 1935)):
#0  0x00007efc95ef0530 in pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007efc7a72fc4a in radeon_drm_cs_emit_ioctl (mtx=0x1bdb188, cond=0x1bdb1b0) at ../../../../../include/c11/threads_posix.h:154
#2  0x00007efc7a72fc4a in radeon_drm_cs_emit_ioctl (sema=0x1bdb188) at ../../../../../src/gallium/auxiliary/os/os_thread.h:248
#3  0x00007efc7a72fc4a in radeon_drm_cs_emit_ioctl (param=param@entry=0x1bdae70) at radeon_drm_winsys.c:594
#4  0x00007efc7a72f4b7 in impl_thrd_routine (p=<optimized out>) at ../../../../../include/c11/threads_posix.h:87
#5  0x00007efc95eeb555 in start_thread (arg=0x7efc777ce700) at pthread_create.c:333
#6  0x00007efc995f5f3d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 2 (Thread 0x7efc75b43700 (LWP 1936)):
#0  0x00007efc9a1ed10a in QMutex::lock() (currentValue=<synthetic pointer>, newValue=0x1, expectedValue=0x0, _q_value=@0x1ce5188: 0x1) at ../../src/corelib/arch/qatomic_x86.h:259
#1  0x00007efc9a1ed10a in QMutex::lock() (currentValue=<synthetic pointer>, newValue=<optimized out>, expectedValue=0x0, _q_value=@0x1ce5188: 0x1) at ../../src/corelib/thread/qgenericatomic.h:166
#2  0x00007efc9a1ed10a in QMutex::lock() (currentValue=<synthetic pointer>, newValue=<optimized out>, expectedValue=0x0, this=0x1ce5188, this@entry=0x1) at ../../src/corelib/thread/qbasicatomic.h:270
#3  0x00007efc9a1ed10a in QMutex::lock() (current=<synthetic pointer>, this=0x1ce5188, this@entry=0x1) at thread/qmutex.h:82
#4  0x00007efc9a1ed10a in QMutex::lock() (this=this@entry=0x1ce5188) at thread/qmutex.cpp:212
#5  0x00007efc9a42acdf in postEventSourcePrepare(GSource*, gint*) (m=0x1ce5188, this=<synthetic pointer>) at ../../src/corelib/thread/qmutex.h:128
#6  0x00007efc9a42acdf in postEventSourcePrepare(GSource*, gint*) (this=0x1ce5160) at ../../src/corelib/thread/qthread_p.h:243
#7  0x00007efc9a42acdf in postEventSourcePrepare(GSource*, gint*) (s=0x7efc700012d0, timeout=0x7efc75b42ae4) at kernel/qeventdispatcher_glib.cpp:254
#8  0x00007efc946d235d in g_main_context_prepare () at /lib64/libglib-2.0.so.0
#9  0x00007efc946d2ceb in g_main_context_iterate.isra () at /lib64/libglib-2.0.so.0
#10 0x00007efc946d2ecc in g_main_context_iteration () at /lib64/libglib-2.0.so.0
#11 0x00007efc9a42b75b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (this=0x7efc700008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:420
#12 0x00007efc9a3d1a8a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) (this=this@entry=0x7efc75b42ca0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:204
#13 0x00007efc9a1efff4 in QThread::exec() (this=this@entry=0x1cf8660) at thread/qthread.cpp:503
#14 0x00007efc9dcb7935 in QQmlThreadPrivate::run() (this=0x1cf8660) at /usr/src/debug/qtdeclarative-opensource-src-5.4.1/src/qml/qml/ftw/qqmlthread.cpp:141
#15 0x00007efc9a1f4ede in QThreadPrivate::start(void*) (arg=0x1cf8660) at thread/qthread_unix.cpp:337
#16 0x00007efc95eeb555 in start_thread (arg=0x7efc75b43700) at pthread_create.c:333
#17 0x00007efc995f5f3d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 1 (Thread 0x7efc9f4f3900 (LWP 1933)):
[KCrash Handler]
#5  0x00007efc9dc37c80 in QQmlComponent::status() const (this=0x8) at /usr/include/qt5/QtCore/qscopedpointer.h:135
#6  0x00007efc9dc37c80 in QQmlComponent::status() const (p=...) at /usr/include/qt5/QtCore/qglobal.h:961
#7  0x00007efc9dc37c80 in QQmlComponent::status() const (this=0x0) at /usr/src/debug/qtdeclarative-opensource-src-5.4.1/src/qml/qml/qqmlcomponent.h:59
#8  0x00007efc9dc37c80 in QQmlComponent::status() const (this=0x0) at /usr/src/debug/qtdeclarative-opensource-src-5.4.1/src/qml/qml/qqmlcomponent.cpp:422
#9  0x00007efc9e803f1d in KDeclarative::QmlObject::completeInitialization(QHash<QString, QVariant> const&) () at /lib64/libKF5Declarative.so.5
#10 0x0000000000408b2f in View::View(QWindow*) ()
#11 0x0000000000406f3d in main ()
Comment 1 Symeon Huang 2015-05-19 17:38:55 UTC
It's Fedora specific I believe. When I change my desktop theme back to Breeze from Fedora 22, there is no crash.
Comment 2 Christoph Feck 2015-05-23 15:37:10 UTC
*** Bug 347985 has been marked as a duplicate of this bug. ***
Comment 3 Christoph Feck 2015-05-23 15:37:50 UTC
*** Bug 347965 has been marked as a duplicate of this bug. ***
Comment 4 Marco Martin 2016-02-11 09:47:33 UTC
*** Bug 356650 has been marked as a duplicate of this bug. ***
Comment 5 Aleix Pol 2016-02-13 02:00:40 UTC
See https://git.reviewboard.kde.org/r/127060/
Comment 6 Aleix Pol 2016-02-16 01:17:49 UTC
Git commit 24d27b9cb733f727431c64e0a7845c39152c1104 by Aleix Pol.
Committed on 16/02/2016 at 01:11.
Pushed by apol into branch 'master'.

Don't call null object pointer
REVIEW: 127060

M  +8    -3    src/kdeclarative/qmlobject.cpp

http://commits.kde.org/kdeclarative/24d27b9cb733f727431c64e0a7845c39152c1104