Don't call null object pointer

BUG: 347962
REVIEW: 127060